Fixed trip planner results itinerary alignment.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10606,37 +10606,41 @@ select.navigator {
         font-size: 1.125rem !important;
         font-weight: 700;
         padding: 0.5rem;
-        width: 5rem; }
-        @media (min-width: 992px) {
-          #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-time {
-            width: 10rem; } }
+        width: 112px; }
         @media (min-width: 992px) {
           #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-time {
             font-size: 23px !important;
-            font-size: 1.4375rem !important; } }
+            font-size: 1.4375rem !important;
+            width: 144px; } }
+        @media (min-width: 1200px) {
+          #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-time {
+            width: 240px; } }
       #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route {
         position: relative;
         display: block;
         padding: 0.5rem 0.75rem;
-        width: 261px; }
+        width: 229px; }
         @media (min-width: 768px) {
           #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route {
-            width: 636px; } }
+            width: 604px; } }
         @media (min-width: 992px) {
           #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route {
-            width: 61rem; } }
+            width: 622px; } }
+        @media (min-width: 1200px) {
+          #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route {
+            width: 896px; } }
         #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route .tp-route-summary {
           display: inline-block;
-          width: 210px; }
+          max-width: 174px; }
           @media (min-width: 768px) {
             #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route .tp-route-summary {
-              width: 582px; } }
+              max-width: 549px; } }
           @media (min-width: 992px) {
             #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route .tp-route-summary {
-              width: 599px; } }
+              max-width: 567px; } }
           @media (min-width: 1200px) {
             #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route .tp-route-summary {
-              width: 921px; } }
+              max-width: 841px; } }
           #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route .tp-route-summary img,
           #tripPlannerResults .trips-found .tp-results .card .card-header .btn .tp-route .tp-route-summary span {
             margin-right: 3px; }
@@ -10705,15 +10709,14 @@ select.navigator {
         padding: 1.75rem 1rem 1rem; } }
     #tripPlannerResults .trips-found .tp-results .card .card-body .leg-time {
       font-weight: 700;
-      margin-right: 1rem;
-      width: 94px;
+      width: 100px;
       padding: 0.5rem;
       padding-left: 0; }
       @media (min-width: 992px) {
         #tripPlannerResults .trips-found .tp-results .card .card-body .leg-time {
           width: 115px; } }
     #tripPlannerResults .trips-found .tp-results .card .card-body .leg-mode {
-      width: 14.75rem;
+      width: auto;
       line-height: 1.2;
       margin-left: -1rem;
       padding-bottom: 0.5rem;
@@ -10722,19 +10725,9 @@ select.navigator {
       @media (min-width: 768px) {
         #tripPlannerResults .trips-found .tp-results .card .card-body .leg-mode {
           margin-left: 0;
-          padding-bottom: 0.75rem;
-          width: auto; } }
-      @media (min-width: 992px) {
-        #tripPlannerResults .trips-found .tp-results .card .card-body .leg-mode {
-          padding-bottom: 1.25rem;
-          padding-left: 2rem;
-          width: 16rem; } }
-      @media (min-width: 1200px) {
-        #tripPlannerResults .trips-found .tp-results .card .card-body .leg-mode {
-          padding-bottom: 1.5rem;
-          width: 20rem; } }
+          padding-bottom: 0.75rem; } }
       #tripPlannerResults .trips-found .tp-results .card .card-body .leg-mode p {
-        margin-top: 0.15rem; }
+        margin-top: 0; }
       #tripPlannerResults .trips-found .tp-results .card .card-body .leg-mode .leg-mode-icon {
         background-color: #fff;
         width: 2rem;
@@ -10757,8 +10750,8 @@ select.navigator {
     #tripPlannerResults .trips-found .tp-results .card .card-body .walk,
     #tripPlannerResults .trips-found .tp-results .card .card-body .bus {
       border-left: 4px dotted #7dcae7; }
-    #tripPlannerResults .trips-found .tp-results .card .card-body .bus {
-      border-left: 4px solid #7dcae7; }
+    #tripPlannerResults .trips-found .tp-results .card .card-body .walk {
+      padding-top: 0.5rem; }
     #tripPlannerResults .trips-found .tp-results .card .card-body .metro-Green {
       border-left: 4px solid #008244; }
     #tripPlannerResults .trips-found .tp-results .card .card-body .metro-Blue {
